clusters/wrtk8s/registry/docker-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-cache
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-cache
  template:
    metadata:
      labels:
        app: docker-cache
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: zot
          # renovate: image=ghcr.io/project-zot/zot-linux-amd64
          image: ghcr.io/project-zot/zot-linux-amd64:v2.1.5
          args: ["serve", "/etc/zot/config.json"]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /var/lib/registry
            - name: config
              mountPath: /etc/zot
              readOnly: true
            - name: certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: docker-cache-data
        - name: config
          configMap:
            name: docker-cache-zot-config
        - name: certs
          secret:
            secretName: registry-tls
---
apiVersion: v1
kind: Service
metadata:
  name: docker-cache
  namespace: registry
  annotations:
    external-dns.alpha.kubernetes.io/hostname: docker.cr.jgarr.net
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: registry-registry-insecure@kubernetescrd
spec:
  type: LoadBalancer
  selector:
    app: docker-cache
  ports:
    - port: 443
      targetPort: 5000
      name: https
    - port: 5001
      targetPort: 5000
      name: metrics
